@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2004/11/01 20:32:37 jdolecek Exp $
+
+SHA1 (Mail_Mime-1.2.1.tgz) = ad04d5d974f4404324bc658f523957cdf10711aa
+Size (Mail_Mime-1.2.1.tgz) = 15268 bytes
